Fix the problem that order, and sales do not load correctly. On going problem: some dish image are not displayed in the customer window

--- a/PIII_Project_RestaurantApp/Pages/SalesReportPage.xaml
+++ b/PIII_Project_RestaurantApp/Pages/SalesReportPage.xaml
@@ -47,7 +47,8 @@
         <!-- Detailed Report -->
         <DataGrid Grid.Row="2" 
               AutoGenerateColumns="False" 
-              x:Name="salesGrid">
+              x:Name="salesGrid"
+              IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Date" 
                   Binding="{Binding Date, StringFormat=d}"/>
