--- a/PIII_Project_RestaurantApp/MainWindow.xaml
+++ b/PIII_Project_RestaurantApp/MainWindow.xaml
@@ -60,6 +60,7 @@
                Margin="0,0,0,20">
                 <Grid>
                     <TextBox x:Name="txtUsername"
+                        KeyDown="txtUsername_KeyDown"
                         Padding="20"
                         FontSize="18"
                         BorderThickness="0"
