--- a/PIII_Project_RestaurantApp/Views/CustomerWindow.xaml
+++ b/PIII_Project_RestaurantApp/Views/CustomerWindow.xaml
@@ -5,7 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PIII_Project_RestaurantApp.Views"
         mc:Ignorable="d"
-        Title="CustomerWindow" Height="850" Width="1000">
+        Title="CustomerWindow"  
+        Width="1000" Height="900"
+        MinWidth="900" MinHeight="650"
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
