--- a/PIII_Project_RestaurantApp/Views/OwnerWinDow.xaml
+++ b/PIII_Project_RestaurantApp/Views/OwnerWinDow.xaml
@@ -5,7 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PIII_Project_RestaurantApp.Views"
         mc:Ignorable="d"
-        Title="Restaurant Management - Owner" Height="450" Width="800">
+        Title="Restaurant Management - Owner" 
+        Width="900" Height="700"    
+        MinWidth="700" MinHeight="650"
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
