--- a/PIII_Project_RestaurantApp/Views/EditDishWindow.xaml
+++ b/PIII_Project_RestaurantApp/Views/EditDishWindow.xaml
@@ -8,7 +8,7 @@
         Title="EditDishWindow" 
         Width="600" Height="600"
         MinWidth="450" MinHeight="400"
-        WindowStartupLocation="CenterOwner"
+        WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize">
     <Grid Margin="30">
         <Grid.RowDefinitions>
