--- a/PIII_Project_RestaurantApp/Views/OrderDetailsWindow.xaml
+++ b/PIII_Project_RestaurantApp/Views/OrderDetailsWindow.xaml
@@ -5,7 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PIII_Project_RestaurantApp.Views"
         mc:Ignorable="d"
-        Title="OrderDetailsWindow" Height="450" Width="800">
+        Title="OrderDetailsWindow" 
+         Width="600" Height="600"
+         MinWidth="450" MinHeight="400"
+         WindowStartupLocation="CenterOwner"
+         ResizeMode="NoResize">
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
